@@ -1,3 +1,8 @@
+Sat Jul 24 21:38:12 2004  Soeren Sandmann  <sandmann@daimi.au.dk>
+
+	* gtk/gtktoolbar.c (internal_insert_element): Warn if you try to
+	add a tool item to a toolbar using the deprecated API.
+
 Fri Jul 23 13:04:10 2004  Matthias Clasen  <maclas@gmx.de>
 
 	* gtk/gtkdnd.c (gtk_drag_dest_set): Create the change to
